--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 attrs==19.3.0
 Click==7.0
 Flask==1.1.1
+Flask-WTF==0.14.3
 importlib-metadata==1.5.0
 itsdangerous==1.1.0
 Jinja2==2.11.1
@@ -15,4 +16,5 @@ pytest-nunit==0.5.2
 six==1.14.0
 wcwidth==0.1.8
 Werkzeug==1.0.0
+WTForms==2.2.1
 zipp==2.2.0
