--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ py==1.8.1
 pyparsing==2.4.6
 pytest==5.3.5
 pytest-nunit==0.5.2
+python-dateutil==2.8.1
 six==1.14.0
 wcwidth==0.1.8
 Werkzeug==1.0.0
